# cubesat-auth

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/cubesat_auth/: audit.py  cli.py  config.py  db.py  models.py  permissions.py  roles.py  security.py  sessions.py  validation.py
src/cubesat_auth/services/: account_service.py  audit_service.py  auth_service.py  satellite_service.py
tests/: conftest.py  test_accounts.py  test_auth.py  test_satellite.py
